// $Id$

Feeds 6.x 1.0 xxxxxxxxxxxxxxxxxxxx
----------------------------------

- #783820 klonos: Fix warning: copy() [function.copy]: Filename cannot be empty
  in FeedsParser.inc on line 168.
- #778416 clemens.tolboom: Better message when plugin is missing.
- #760140 lyricnz: FeedsBatch->total not updated when addItem($item) is called.
- #755544 Monkey Master: Keep batch processing when mapping fails.
- alex_b: Reset import schedule after deleting items from feed.
- #653412 rbrandon: Do not create items older than expiry time.
- #725392 nicholasThompson: FeedsBatch does not check feeds folder exists before
  uploading.
- #776972 lyricnz: Messages use plural when describing single item.
- #701390 frega, morningtime, Mixologic, alex_b et. al.: Fix RSS 1.0 parsing
  and add basic test framework for common_syndication_parser.
- #781058 blakehall: Create teaser for imported nodes. NOTE: this may mean that
  your existing installation has shorter node teasers as expected. If this is
  the case, increase "Length of trimmed posts" on admin/content/node-settings.
- #622932-30 mikl: fix remaining non-standard SQL.
- #624464 bangpound: Support tabs as delimiters.

Feeds 6.x 1.0 Alpha 14, 2010-04-11
----------------------------------

- #758664: Fix regression introduced with #740962.

Feeds 6.x 1.0 Alpha 13, 2010-03-30
----------------------------------

- #622932 pounard: Fix SQL capitalization.
- #622932 pounard: Fix non-standard SQL (PostgreSQL compatibility)
- #705872 Scott Reynolds: Added HTTPFetcher autodiscovery
- #740962 alex_b: Fix FileFetcher Attached to Feed Node, Upload Field Not Saving
  File Path.
- #754938 Monkey Master: FeedsCSVParser.inc uses strtolower() while parsing
  UTF-8 files.
- #736684 Souvent22, Mixologic: FeedsDateTime & Batch DateTime causes core
  dumps.
- #750168 jtr: _parser_common_syndication_title does not strip html tags before
  constructing a title.
- #648080 pvhee: FeedsNodeProcessor - static caching of mapping targets makes